# plogr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  plogr.spec  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
config/: plogr.conf
docs/man/: plogr.1
libdnf5-plugin/dnf5-plugin/: CMakeLists.txt
libdnf5-plugin/dnf5-plugin/actions.d/: plogr.actions
libdnf5-plugin/dnf5-plugin/packaging/: plogr-libdnf5.spec
libdnf5-plugin/dnf5-plugin/src/: plogr_plugin.cpp
packaging/archlinux/: PKGBUILD  plogr-hook.sh  plogr.hook
packaging/debian/: changelog  control  plogr.conf  post-invoke-hook  rules
src/plogr/: __init__.py  cli.py  config.py  exceptions.py  logger.py  models.py
src/plogr/hooks/dnf/: plugin.py
systemd-user/: plogr.service
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_dnf_backend.py
tests/unit/: __init__.py  test_apt_backend.py  test_backend_discovery.py  test_base_backend.py  test_cli.py  test_config.py  test_config_persistence.py  test_cpp_plugin.py  test_dnf_backend.py  test_downloads_monitor.py  test_hooks.py  test_logger.py  test_logger_locking.py  test_models.py  test_monitors.py  test_utils.py
